--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pages:
   - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
   - mkdir -p ~/.ssh
   - chmod 700 ~/.ssh
-  - ssh-keyscan $VM_IPADDRESS >> ~/.ssh/known_hosts
+  - ssh-keyscan 34.135.235.127 >> ~/.ssh/known_hosts
   - chmod 644 ~/.ssh/known_hosts
   script:
   - ssh sso-ct@34.135.235.127 "cd /usr/node/ct-fe && git checkout master && git pull origin master && yarn && npm run build && pm2 restart ct-fe && exit"
