--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@glidejs/glide": "^3.4.1",
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
@@ -18,6 +19,7 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
     "moment": "^2.29.1",
     "rc-slider": "^9.7.4",
@@ -25,11 +27,14 @@
     "react-dates": "^21.8.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
