--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
     "universal-cookie": "^4.0.4",
