--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.1.0",
     "react-dates": "^21.8.0",
     "react-dom": "^18.1.0",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
