--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "rc-slider": "^9.7.4",
     "react": "^18.1.0",
