--- a/.deployments/staging/k8s.yaml
+++ b/.deployments/staging/k8s.yaml
@@ -56,7 +56,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: home-page
+            name: home-services
             port:
               number: 3000
   ingressClassName: nginx
