--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "antd": "^4.22.2",
     "axios": "^0.27.2",
+    "firebase": "^9.9.1",
     "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
     "lodash.debounce": "^4.0.8",
