--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "rc-slider": "^9.7.4",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dates": "^21.8.0",
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
