--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rc-slider": "^9.7.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dates": "^21.8.0",
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
@@ -36,6 +37,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
@@ -76,6 +78,7 @@
   "devDependencies": {
     "@types/glidejs__glide": "^3.4.0",
     "@types/google-map-react": "^2.1.2",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dates": "^21.8.3",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^10.4.7",
